project files uploaded

--- a/9_agent_real_time_stock_price.ipynb
+++ b/9_agent_real_time_stock_price.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:21.572846Z",
-     "start_time": "2025-07-08T00:01:21.558347Z"
+     "end_time": "2025-07-15T22:51:27.800068Z",
+     "start_time": "2025-07-15T22:51:26.433471Z"
     }
    },
    "source": [
@@ -17,16 +17,18 @@
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.graph.message import add_messages\n",
     "from langchain_core.tools import tool\n",
-    "from langgraph.prebuilt import ToolNode, tools_condition"
+    "from langgraph.prebuilt import ToolNode, tools_condition\n",
+    "import requests\n",
+    "import os"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:21.989032Z",
-     "start_time": "2025-07-08T00:01:21.973225Z"
+     "end_time": "2025-07-15T22:51:27.835871Z",
+     "start_time": "2025-07-15T22:51:27.815204Z"
     }
    },
    "cell_type": "code",
@@ -42,18 +44,35 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:22.316029Z",
-     "start_time": "2025-07-08T00:01:22.310420Z"
+     "end_time": "2025-07-15T22:51:28.285007Z",
+     "start_time": "2025-07-15T22:51:28.273237Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "\n",
+    "memory = MemorySaver()"
+   ],
+   "id": "46cc0d42b798053f",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-15T22:51:28.306993Z",
+     "start_time": "2025-07-15T22:51:28.302469Z"
     }
    },
    "cell_type": "code",
@@ -66,60 +85,183 @@
    ],
    "id": "54a3f559fe55409e",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:22.689676Z",
-     "start_time": "2025-07-08T00:01:22.654211Z"
+     "end_time": "2025-07-15T22:51:29.294087Z",
+     "start_time": "2025-07-15T22:51:28.457997Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "@tool\n",
-    "def get_stock_price(symbol: str) -> float:\n",
-    "    '''Return the current price of a stock given the stock symbol\n",
-    "    :param symbol: stock symbol\n",
-    "    :return: current price of the stock\n",
-    "    '''\n",
-    "    return {\n",
-    "        \"MSFT\" : 200.3,\n",
-    "        \"AAPL\" : 100.4,\n",
-    "        \"AMZN\" : 150.0,\n",
-    "        \"RIL\" : 87.6\n",
-    "    }.get(symbol, 0.0)\n",
     "\n",
-    "tools = [get_stock_price]\n",
+    "# Common helper function for Alpha Vantage API calls\n",
+    "def alpha_vantage_call(params: dict) -> dict:\n",
+    "    base_url = os.getenv(\"ALPHA_VANTAGE_BASE_URL\")\n",
+    "    api_key = os.getenv(\"ALPHA_VANTAGE_API_KEY\")\n",
+    "\n",
+    "    params[\"apikey\"] = api_key\n",
+    "    response = requests.get(base_url, params=params)\n",
+    "    response.raise_for_status()\n",
+    "    return response.json()\n",
+    "\n",
+    "# Define tools for each functionality\n",
+    "\n",
+    "@tool\n",
+    "def get_realtime_stock(symbol: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Fetches the real-time stock price for a given symbol.\n",
+    "    Official documentation: https://www.alphavantage.co/documentation/#intraday\n",
+    "    \"\"\"\n",
+    "    data = alpha_vantage_call({\n",
+    "        \"function\": \"TIME_SERIES_INTRADAY\",\n",
+    "        \"symbol\": symbol.upper(),\n",
+    "        \"interval\": \"5min\"\n",
+    "    })\n",
+    "    time_series = data.get(\"Time Series (5min)\")\n",
+    "    if not time_series:\n",
+    "        return f\"Error: Could not fetch real-time data for {symbol}.\"\n",
+    "    latest_timestamp = max(time_series.keys())\n",
+    "    latest_data = time_series[latest_timestamp]\n",
+    "    return f\"The latest price for {symbol.upper()} is ${float(latest_data['1. open']):.2f}.\"\n",
+    "\n",
+    "@tool\n",
+    "def search_ticker(company_name: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Searches the stock ticker symbol for a given company name.\n",
+    "    Official documentation: https://www.alphavantage.co/documentation/#symbolsearch\n",
+    "    \"\"\"\n",
+    "    data = alpha_vantage_call({\n",
+    "        \"function\": \"SYMBOL_SEARCH\",\n",
+    "        \"keywords\": company_name\n",
+    "    })\n",
+    "    best_matches = data.get(\"bestMatches\", [])\n",
+    "    if not best_matches:\n",
+    "        return f\"No ticker symbols found for {company_name}.\"\n",
+    "    results = [f\"{match['1. symbol']} - {match['2. name']} ({match['4. region']})\"\n",
+    "               for match in best_matches]\n",
+    "    return f\"Search results for '{company_name}':\\n\" + \"\\n\".join(results)\n",
+    "\n",
+    "@tool\n",
+    "def get_company_overview(symbol: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Fetches the company overview, including key financial metrics.\n",
+    "    Official documentation: https://www.alphavantage.co/documentation/#company-overview\n",
+    "    \"\"\"\n",
+    "    data = alpha_vantage_call({\n",
+    "        \"function\": \"OVERVIEW\",\n",
+    "        \"symbol\": symbol.upper(),\n",
+    "    })\n",
+    "    if not data:\n",
+    "        return f\"No company overview found for {symbol}.\"\n",
+    "    return (f\"Company Overview for {symbol.upper()}:\\n\"\n",
+    "            f\"Name: {data.get('Name')}\\nSector: {data.get('Sector')}\\nIndustry: {data.get('Industry')}\\n\"\n",
+    "            f\"Market Cap: {data.get('MarketCapitalization')}\\nRevenue: {data.get('RevenueTTM')}\\n\"\n",
+    "            f\"EPS: {data.get('EPS')}\\nPE Ratio: {data.get('PERatio')}\")\n",
+    "\n",
+    "@tool\n",
+    "def get_earnings_data(symbol: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Fetches recent earnings data for a given symbol.\n",
+    "    Official documentation: https://www.alphavantage.co/documentation/#earnings\n",
+    "    \"\"\"\n",
+    "    data = alpha_vantage_call({\n",
+    "        \"function\": \"EARNINGS\",\n",
+    "        \"symbol\": symbol.upper(),\n",
+    "    })\n",
+    "    if not data:\n",
+    "        return f\"No earnings data found for {symbol}.\"\n",
+    "    quarterly_data = data.get(\"quarterlyEarnings\", [])\n",
+    "    if not quarterly_data:\n",
+    "        return f\"No recent earnings data available for {symbol}.\"\n",
+    "    latest_earnings = quarterly_data[0]\n",
+    "    return (f\"Earnings Data for {symbol.upper()}:\\nFiscal Date Ending: {latest_earnings['fiscalDateEnding']}\\n\"\n",
+    "            f\"Reported EPS: {latest_earnings['reportedEPS']}\\nEstimated EPS: {latest_earnings.get('estimatedEPS', 'N/A')}.\")\n",
+    "\n",
+    "@tool\n",
+    "def get_historical_stock_data(symbol: str, interval: str = \"daily\") -> str:\n",
+    "    \"\"\"\n",
+    "    Fetches and summarizes historical stock data for a given symbol and interval.\n",
+    "    Only returns a summary rather than the full time series.\n",
+    "    Official documentation: https://www.alphavantage.co/documentation/\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        function_mapping = {\n",
+    "            \"daily\": \"TIME_SERIES_DAILY\",\n",
+    "            \"weekly\": \"TIME_SERIES_WEEKLY\",\n",
+    "            \"monthly\": \"TIME_SERIES_MONTHLY\",\n",
+    "        }\n",
+    "        function = function_mapping.get(interval.lower(), \"TIME_SERIES_DAILY\")\n",
+    "\n",
+    "        # Request data from Alpha Vantage\n",
+    "        data = alpha_vantage_call({\n",
+    "            \"function\": function,\n",
+    "            \"symbol\": symbol.upper(),\n",
+    "        })\n",
+    "\n",
+    "        # Extract the relevant time series\n",
+    "        time_series_key = next(iter(data))  # First key in the response contains the time series\n",
+    "        time_series = data.get(time_series_key)\n",
+    "\n",
+    "        if not time_series:\n",
+    "            return f\"Failed to fetch {interval.title()} data for {symbol.upper()}.\"\n",
+    "\n",
+    "        # Calculate summary metrics\n",
+    "        latest_date = max(time_series.keys())\n",
+    "        latest_data = time_series[latest_date]\n",
+    "\n",
+    "        highest_price = max(float(info[\"2. high\"]) for info in time_series.values())\n",
+    "        lowest_price = min(float(info[\"3. low\"]) for info in time_series.values())\n",
+    "        total_volume = sum(int(info.get(\"5. volume\", 0)) for info in time_series.values())\n",
+    "\n",
+    "        return (f\"Summary of {symbol.upper()} stock ({interval.title()} data):\\n\"\n",
+    "                f\"- Latest Date: {latest_date}\\n\"\n",
+    "                f\"- Open Price: ${float(latest_data['1. open']):.2f}\\n\"\n",
+    "                f\"- Close Price: ${float(latest_data['4. close']):.2f}\\n\"\n",
+    "                f\"- Highest Price: ${highest_price:.2f}\\n\"\n",
+    "                f\"- Lowest Price: ${lowest_price:.2f}\\n\"\n",
+    "                f\"- Total Volume: {total_volume:,} shares\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        return f\"An error occurred while fetching data for {symbol.upper()}: {str(e)}\"\n",
+    "\n",
+    "# Initialize LLM and bind tools\n",
+    "tools = [get_realtime_stock, search_ticker, get_company_overview, get_earnings_data, get_historical_stock_data]\n",
     "\n",
     "llm = init_chat_model(\"google_genai:gemini-2.0-flash\")\n",
     "llm_with_tools = llm.bind_tools(tools)"
    ],
    "id": "9a46b796a9de1ee9",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:23.310782Z",
-     "start_time": "2025-07-08T00:01:23.157967Z"
+     "end_time": "2025-07-15T22:51:29.570256Z",
+     "start_time": "2025-07-15T22:51:29.312129Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def chatbot(state: State):\n",
-    "    return {\"messages\": [llm_with_tools.invoke(state[\"messages\"])]}\n",
     "\n",
+    "# Function to process user input\n",
+    "def chatbot_node(state: State):\n",
+    "    msg = llm_with_tools.invoke(state[\"messages\"])\n",
+    "    return {\"messages\": [msg]}\n",
+    "\n",
+    "# Build LangGraph\n",
     "builder = StateGraph(State)\n",
-    "builder.add_node(chatbot)\n",
+    "builder.add_node(\"chatbot\", chatbot_node)\n",
     "builder.add_node(\"tools\", ToolNode(tools))\n",
     "\n",
     "builder.add_edge(START, \"chatbot\")\n",
     "builder.add_conditional_edges(\"chatbot\", tools_condition)\n",
     "builder.add_edge(\"tools\", \"chatbot\")\n",
     "\n",
-    "graph = builder.compile()\n",
+    "graph = builder.compile(checkpointer=memory)\n",
     "\n",
     "from IPython.display import Image, display\n",
     "\n",
@@ -138,84 +280,44 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 19
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:25.813575Z",
-     "start_time": "2025-07-08T00:01:24.258655Z"
+     "end_time": "2025-07-15T22:52:02.481886Z",
+     "start_time": "2025-07-15T22:51:29.589257Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "state = graph.invoke({\"messages\": [{\"role\": \"user\", \"content\": \"What is the price for MSFT stock right now?\"}]})\n",
-    "print(state[\"messages\"][-1].content)"
-   ],
-   "id": "668557694e78b6dd",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The current price for MSFT stock is 200.3.\n"
-     ]
-    }
-   ],
-   "execution_count": 20
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:31.151968Z",
-     "start_time": "2025-07-08T00:01:29.755770Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "state = graph.invoke({\"messages\": [{\"role\": \"user\", \"content\": \"Who invented Apple? What is the stock price for AAPL right now?\"}]})\n",
-    "print(state[\"messages\"][-1].content)"
-   ],
-   "id": "1047a0cb6bb450c7",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Apple was founded by Steve Jobs, Steve Wozniak, and Ronald Wayne. The current stock price for AAPL is $100.4.\n"
-     ]
-    }
-   ],
-   "execution_count": 21
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:32.979621Z",
-     "start_time": "2025-07-08T00:01:31.216702Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "msg = \"I want to buy 20 AMZN stocks using current price. Then 15 MSFT. What will be the total cost?\"\n",
+    "# Example Invocation\n",
+    "config = {\"configurable\": {\"thread_id\": \"finance_chat\"}}\n",
+    "state = None\n",
+    "while True:\n",
+    "    user_input = input(\"You: \").strip()\n",
+    "    if user_input.lower() in {\"quit\", \"exit\"}:\n",
+    "        break\n",
     "\n",
-    "state = graph.invoke({\"messages\": [{\"role\": \"user\", \"content\": msg}]})\n",
-    "print(state[\"messages\"][-1].content)"
+    "    if not state:\n",
+    "        state = {\"messages\": [{\"role\": \"user\", \"content\": user_input}]}\n",
+    "    else:\n",
+    "        state[\"messages\"].append({\"role\": \"user\", \"content\": user_input})\n",
+    "\n",
+    "    state = graph.invoke(state, config=config)\n",
+    "    print(\"Bot:\", state[\"messages\"][-1].content)"
    ],
-   "id": "887df3c969ae6fa1",
+   "id": "d012373d4e031c8b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK. The current price for AMZN is $150 and for MSFT is $200.3.\n",
-      "The total cost for 20 AMZN stocks is 20 * $150 = $3000.\n",
-      "The total cost for 15 MSFT stocks is 15 * $200.3 = $3004.5.\n",
-      "Therefore, the total cost for both is $3000 + $3004.5 = $6004.5.\n"
+      "Bot: The current stock price for Booz Allen Hamilton Holding Corp (BAH) is $107.65.\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -223,7 +325,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "e70d7360d9ae12fa"
+   "id": "4403803cc2949e62"
   }
  ],
  "metadata": {
