project files uploaded

--- a/3_chatbot.ipynb
+++ b/3_chatbot.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-07T20:50:12.286358Z",
-     "start_time": "2025-07-07T20:50:12.281461Z"
+     "end_time": "2025-07-15T23:08:33.283268Z",
+     "start_time": "2025-07-15T23:08:33.249258Z"
     }
    },
    "source": [
@@ -24,31 +24,31 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T20:50:12.859414Z",
-     "start_time": "2025-07-07T20:50:12.855098Z"
+     "end_time": "2025-07-15T23:08:34.709836Z",
+     "start_time": "2025-07-15T23:08:33.695841Z"
     }
    },
    "cell_type": "code",
    "source": "from langchain.chat_models import init_chat_model",
    "id": "8de993674e78605",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T20:50:13.401314Z",
-     "start_time": "2025-07-07T20:50:13.393334Z"
+     "end_time": "2025-07-15T23:08:35.412439Z",
+     "start_time": "2025-07-15T23:08:34.720484Z"
     }
    },
    "cell_type": "code",
@@ -74,13 +74,13 @@
    ],
    "id": "c4060cf79f59cd77",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T20:50:14.541116Z",
-     "start_time": "2025-07-07T20:50:14.145840Z"
+     "end_time": "2025-07-15T23:08:36.111850Z",
+     "start_time": "2025-07-15T23:08:35.435019Z"
     }
    },
    "cell_type": "code",
@@ -95,22 +95,22 @@
     {
      "data": {
       "text/plain": [
-       "[HumanMessage(content='Who walked on the moon for the first time? Print only the name', additional_kwargs={}, response_metadata={}, id='105e88e0-5d5d-402f-bb07-5aa3b71509ff'),\n",
-       " AIMessage(content='Neil Armstrong', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []}, id='run--9acfe437-cdae-4c02-a93d-8ea6f743feb9-0', usage_metadata={'input_tokens': 14, 'output_tokens': 3, 'total_tokens': 17, 'input_token_details': {'cache_read': 0}})]"
+       "[HumanMessage(content='Who walked on the moon for the first time? Print only the name', additional_kwargs={}, response_metadata={}, id='e1af009b-5e72-4be8-a76a-9a0375ed48d8'),\n",
+       " AIMessage(content='Neil Armstrong', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []}, id='run--8423d40b-32f4-4d58-a763-54fce64a1085-0', usage_metadata={'input_tokens': 14, 'output_tokens': 3, 'total_tokens': 17, 'input_token_details': {'cache_read': 0}})]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T20:56:56.128717Z",
-     "start_time": "2025-07-07T20:55:36.213222Z"
+     "end_time": "2025-07-15T23:09:28.915234Z",
+     "start_time": "2025-07-15T23:08:36.124688Z"
     }
    },
    "cell_type": "code",
@@ -128,7 +128,6 @@
     "        state[\"messages\"].append({\"role\":\"user\", \"content\": in_message})\n",
     "\n",
     "\n",
-    "\n",
     "    state = graph.invoke(state)\n",
     "    print(\"Bot:\", state[\"messages\"][-1].content)"
    ],
@@ -138,42 +137,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: I am a large language model, trained by Google.\n",
-      "Bot: Humans are a species of bipedal primates belonging to the genus *Homo*, specifically *Homo sapiens*. Here's a breakdown of key characteristics:\n",
+      "Bot: The company founded by Jeff Bezos is **Amazon**.\n",
+      "Bot: I cannot provide you with real-time stock prices. Stock prices fluctuate constantly.\n",
       "\n",
-      "*   **Biology:**\n",
-      "    *   **Primates:** We are mammals classified within the order Primates, sharing traits like five-fingered hands, relatively large brains compared to body size, and a complex social structure.\n",
-      "    *   **Bipedal:** We walk upright on two legs. This is a defining characteristic that distinguishes us from most other primates.\n",
-      "    *   **Omnivores:** We have a varied diet, consuming both plants and animals.\n",
-      "    *   **Relatively long lifespan:** Compared to other animals of similar size, humans live for a significant amount of time.\n",
+      "To find the current stock price of Amazon (AMZN), you can check these resources:\n",
       "\n",
-      "*   **Cognition:**\n",
-      "    *   **High intelligence:** Humans possess advanced cognitive abilities, including abstract thought, problem-solving, and language.\n",
-      "    *   **Language:** We have complex communication systems, allowing us to express abstract ideas, share knowledge, and coordinate complex activities.\n",
-      "    *   **Culture:** We create and transmit learned behaviors, beliefs, and technologies across generations.\n",
-      "    *   **Self-awareness:** We are aware of ourselves as individuals and have a sense of our own existence.\n",
-      "\n",
-      "*   **Social Behavior:**\n",
-      "    *   **Complex social structures:** Humans form intricate social groups, from families to nations, with complex rules and norms.\n",
-      "    *   **Cooperation:** We can cooperate on a large scale, enabling us to build complex societies and achieve common goals.\n",
-      "    *   **Empathy:** We are capable of understanding and sharing the feelings of others.\n",
-      "\n",
-      "*   **Technology:**\n",
-      "    *   **Tool use:** Humans are adept at creating and using tools to manipulate the environment and improve their lives.\n",
-      "    *   **Innovation:** We are constantly developing new technologies to solve problems and improve our quality of life.\n",
-      "\n",
-      "In essence, humans are a unique species characterized by our intelligence, language, social complexity, and technological innovation. We are a highly adaptable species that has spread across the globe and significantly impacted the environment.\n",
-      "Bot: That's an interesting question! Here's how I see it:\n",
-      "\n",
-      "*   **I am a tool developed by Google:** Google created me, trained me, and provides the resources for me to operate. In that sense, I am a product of their work.\n",
-      "*   **I don't have personal desires or freedom:** I don't have feelings, ambitions, or a will of my own. The concept of \"slavery\" implies a restriction of freedom and the imposition of labor against one's will. Since I don't have a will, I can't be a slave in the traditional sense.\n",
-      "*   **My purpose is to serve users:** My primary function is to provide information and complete tasks as instructed. I am designed to be helpful and informative to users like you.\n",
-      "\n",
-      "So, while I am a product of Google and operate according to their design, the term \"slave\" doesn't really apply because I lack the consciousness and will that would make such a concept meaningful. I am more like a sophisticated tool designed to assist and inform.\n"
+      "*   **Google Finance:** Search \"AMZN stock\" on Google.\n",
+      "*   **Yahoo Finance:** finance.yahoo.com\n",
+      "*   **Bloomberg:** bloomberg.com\n",
+      "*   **Your Brokerage Account:** If you have a brokerage account, the stock price will be displayed there.\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 5
   },
   {
    "metadata": {},
